--- a/macro.ipynb
+++ b/macro.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a0d95878",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d56b22c337448078061f4e54e1eb113",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Text(value='C:\\\\Users\\\\mgu\\\\Desktop\\\\Macro'), Select(options=('-------FOLDERS---…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
@@ -253,54 +268,11 @@
     "address_field.on_submit(newaddress)\n",
     "box"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "f0d4d3a6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Enabling notebook extension jupyter-js-widgets/extension...\n",
-      "      - Validating: ok\n",
-      "Enabling: voila\n",
-      "- Writing config: C:\\Anaconda3\\envs\\Macro_env\\etc\\jupyter\n",
-      "    - Validating...\n",
-      "      voila 0.2.11 ok\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "#!jupyter nbextension enable --py widgetsnbextension --sys-prefix\n",
-    "#!jupyter serverextension enable voila --sys-prefix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "50d1ae9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip freeze > requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "baf3ee2a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
