--- a/macro.ipynb
+++ b/macro.ipynb
@@ -3,18 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a0d95878",
+   "id": "1bb36b12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d56b22c337448078061f4e54e1eb113",
+       "model_id": "b0e34fca392442a5b13cac720d048be6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(Text(value='C:\\\\Users\\\\mgu\\\\Desktop\\\\Macro'), Select(options=('-------FOLDERS---…"
+       "HBox(children=(VBox(children=(Text(value='C:\\\\Users\\\\mgu\\\\Desktop\\\\Python_files'), Select(options=('-------FOL…"
       ]
      },
      "metadata": {},
@@ -22,6 +22,7 @@
     }
    ],
    "source": [
+    "# import requests\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import cv2\n",
@@ -192,8 +193,8 @@
     "im_button1 = widgets.Button(description = 'Input ID to display')\n",
     "im_button1.on_click(image_button_select)\n",
     "\n",
-    "im_text2 = widgets.Textarea(placeholder='Enter length in mm',layout = widgets.Layout(width = '80%'))\n",
-    "im_button2 = widgets.Button(description = 'Enter length in mm')\n",
+    "im_text2 = widgets.Textarea(placeholder='Enter length in cm',layout = widgets.Layout(width = '80%'))\n",
+    "im_button2 = widgets.Button(description = 'Enter length in cm')\n",
     "im_button2.on_click(write_actual_length)\n",
     "\n",
     "im_button3 = widgets.Button(description = 'Draw a line')\n",
@@ -261,18 +262,134 @@
     "address_field = widgets.Text(value=str(cwd))\n",
     "up_button = widgets.Button(description='Up')\n",
     "select = widgets.Select(options=get_folder_contents(cwd), rows=20, value=None)\n",
-    "box = widgets.HBox([widgets.VBox([address_field, select]), widgets.VBox([up_button]), w_ui, im_ui])\n",
-    "\n",
     "select.observe(selecting, names='value')\n",
     "up_button.on_click(parent)\n",
     "address_field.on_submit(newaddress)\n",
+    "box = widgets.HBox([widgets.VBox([address_field, select]), widgets.VBox([up_button]), w_ui, im_ui])\n",
+    "\n",
+    "\n",
     "box"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "686007cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<details>\n",
+       "<summary>Click to view session information</summary>\n",
+       "<pre>\n",
+       "-----\n",
+       "cv2                 4.5.3\n",
+       "ipywidgets          7.6.3\n",
+       "numpy               1.20.1\n",
+       "session_info        1.0.0\n",
+       "-----\n",
+       "</pre>\n",
+       "<details>\n",
+       "<summary>Click to view modules imported as dependencies</summary>\n",
+       "<pre>\n",
+       "OpenSSL             20.0.1\n",
+       "anyio               NA\n",
+       "attr                20.3.0\n",
+       "babel               2.9.0\n",
+       "backcall            0.2.0\n",
+       "bcrypt              3.2.0\n",
+       "brotli              NA\n",
+       "certifi             2020.12.05\n",
+       "chardet             3.0.4\n",
+       "colorama            0.4.4\n",
+       "cryptography        3.4.7\n",
+       "cython_runtime      NA\n",
+       "dateutil            2.8.1\n",
+       "decorator           5.0.6\n",
+       "idna                2.8\n",
+       "ipykernel           5.3.4\n",
+       "ipython_genutils    0.2.0\n",
+       "jedi                0.17.2\n",
+       "jinja2              2.11.3\n",
+       "json5               NA\n",
+       "jsonschema          3.2.0\n",
+       "jupyter_server      1.4.1\n",
+       "jupyterlab_server   2.4.0\n",
+       "markupsafe          1.1.1\n",
+       "mkl                 2.3.0\n",
+       "mpl_toolkits        NA\n",
+       "nbclassic           NA\n",
+       "nbformat            5.1.3\n",
+       "nt                  NA\n",
+       "ntsecuritycon       NA\n",
+       "packaging           20.9\n",
+       "parso               0.7.0\n",
+       "pickleshare         0.7.5\n",
+       "pkg_resources       NA\n",
+       "prometheus_client   NA\n",
+       "prompt_toolkit      3.0.17\n",
+       "pvectorc            NA\n",
+       "pygments            2.8.1\n",
+       "pyrsistent          NA\n",
+       "pythoncom           NA\n",
+       "pywintypes          NA\n",
+       "requests            2.22.0\n",
+       "send2trash          NA\n",
+       "six                 1.15.0\n",
+       "sniffio             1.2.0\n",
+       "socks               1.7.1\n",
+       "sphinxcontrib       NA\n",
+       "storemagic          NA\n",
+       "tornado             6.1\n",
+       "traitlets           5.0.5\n",
+       "urllib3             1.25.11\n",
+       "wcwidth             0.2.5\n",
+       "win32api            NA\n",
+       "win32com            NA\n",
+       "win32security       NA\n",
+       "zmq                 20.0.0\n",
+       "zope                NA\n",
+       "</pre>\n",
+       "</details> <!-- seems like this ends pre, so might as well be explicit -->\n",
+       "<pre>\n",
+       "-----\n",
+       "IPython             7.22.0\n",
+       "jupyter_client      6.1.12\n",
+       "jupyter_core        4.7.1\n",
+       "jupyterlab          3.0.14\n",
+       "notebook            6.3.0\n",
+       "-----\n",
+       "Python 3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]\n",
+       "Windows-10-10.0.19041-SP0\n",
+       "-----\n",
+       "Session information updated at 2021-09-06 09:40\n",
+       "</pre>\n",
+       "</details>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5289927",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
