--- a/macro.ipynb
+++ b/macro.ipynb
@@ -63,7 +63,7 @@
     "    \n",
     "    video = cv2.VideoCapture(0)\n",
     "    with w_output:\n",
-    "        while cideo.isOpened():\n",
+    "        while video.isOpened():\n",
     "            check, frame = video.read()\n",
     "            #gray = cv2.cvtColor(frame,cv2.COLOR_BGR2GRAY)\n",
     "            cv2.imshow(\"Capturing\",frame)\n",
